fix overlapping bottoni

--- a/Home/home.css
+++ b/Home/home.css
@@ -51,6 +51,7 @@ body:not(.user-is-tabbing) textarea:focus {
   display: flex;
   align-items: center;
   flex-direction: column;
+  z-index: 1;
 }
 
 .home-navbar-collapse-button-container {
