--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -134,6 +134,7 @@
 .custom-select {
   min-width: 7.5rem;
   position: relative;
+  z-index: 0;
 }
 
 select {
@@ -145,7 +146,7 @@ select {
   background: var(--color-2);
   border: 1px solid var(--color-2);
   border-radius: 0.25rem;
-  color: #000;
+  color: var(--text-color-1);
   cursor: pointer;
 }
 
